# UnrealMCP

./: .gitignore  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  README.md
crates/unreal-mcp-protocol/: Cargo.toml
crates/unreal-mcp-protocol/src/: codec.rs  commands.rs  envelope.rs  error.rs  lib.rs
crates/unreal-mcp-protocol/tests/: codec_roundtrip.rs
crates/unreal-mcp-server/: Cargo.toml
crates/unreal-mcp-server/src/: bridge_client.rs  lib.rs  main.rs  mcp_stdio.rs  tools.rs
crates/unreal-mcp-server/tests/: connection_tools.rs  mcp_stdio.rs
crates/unreal-mcp-tests/: Cargo.toml
crates/unreal-mcp-tests/src/: lib.rs
docs/protocol/: envelope.md  tools.md
docs/superpowers/plans/: 2026-05-01-asset-import-mesh-v1.md  2026-05-01-gameplay-foundation-v1.md  2026-05-01-gameplay-runtime-v1.md  2026-05-01-landscape-grounding-v1.md  2026-05-01-level-world-bulk.md  2026-05-01-lighting-v1.md  2026-05-01-materials-v1.md  2026-05-01-mcp-connection-dispatch.md  2026-05-01-runtime-animation-v1.md  2026-05-01-rust-unreal-mcp-foundation.md  2026-05-01-scene-assembly-v1.md  2026-05-01-unreal-json-bridge.md
docs/superpowers/specs/: 2026-05-01-asset-import-mesh-v1-design.md  2026-05-01-gameplay-foundation-v1-design.md  2026-05-01-gameplay-runtime-v1-design.md  2026-05-01-landscape-grounding-v1-design.md  2026-05-01-level-world-bulk-design.md  2026-05-01-lighting-v1-design.md  2026-05-01-materials-v1-design.md  2026-05-01-runtime-animation-v1-design.md  2026-05-01-rust-unreal-mcp-design.md  2026-05-01-scene-assembly-v1-design.md  (+1 more)
unreal/UnrealMCPBridge/: UnrealMCPBridge.uplugin
(+12 files in other folders)
