[workspace]
members = [
    "crates/unreal-mcp-protocol",
    "crates/unreal-mcp-server",
    "crates/unreal-mcp-tests",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/Erwann9875/UnrealMCP"

[workspace.dependencies]
anyhow = "1"
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v4"] }
