[package]
name = "unreal-mcp-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["io-std"] }
tracing.workspace = true
tracing-subscriber.workspace = true
unreal-mcp-protocol = { path = "../unreal-mcp-protocol" }

[dev-dependencies]
unreal-mcp-tests = { path = "../unreal-mcp-tests" }
